# GeneratorDKA

./: .gitignore  Pipfile  README.md  pyproject.toml  scripts.py
Widgets/: AddWidget.py  CheckChains.py  GraphView.py  InputView.py  MainWindow.py  TableView.py
Widgets/models/: DKA.py  DataFrameModel.py  dka.py
test/: test_dka.py
