[tool.poetry]
name = "dka-graph-and-table"
version = "0.1.0"
description = "This course work build DKA in table and graph by alphabet with necessary subchain and inputing multiplicity. And you can check your chains by buiding DKA"
authors = ["vorop <2vvoropaevv2@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyvis = "^0.3.2"
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
